Power Automate run time pt 1

--- a/docs/05.03.01 - Monitoring Power Automate - Run Time - Triggers, Workflows and Runs.md
+++ b/docs/05.03.01 - Monitoring Power Automate - Run Time - Triggers, Workflows and Runs.md
@@ -12,13 +12,13 @@ The goal of this article is to **describe how to implement a monitoring strategy
 
 **Trigger** settings consist of **custom tracking identifiers**, **secure input and outputs**, **concurrency settings**, **schema validation and trigger conditions**.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/PowerAutomate-Triggers-CDS.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/PowerAutomate-Triggers-CDS.JPG" style="zoom:50%;" />
 
 ### Secure Inputs and Outputs
 
 **Secure inputs and outputs** can be used to hide input and output data on triggers and actions. Keep in mind [important considerations, including the obfuscation of data and the impact](https://docs.microsoft.com/en-us/azure/logic-apps/logic-apps-securing-a-logic-app#obfuscation-considerations), when using secure inputs and outputs. [I'll cover this more in the following article for reviewing run time data.](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-power-automate---run-time-part-2-tracked-properties-and-error-handling)
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/InputOutput/turn-on-secure-inputs-outputs.png" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/InputOutput/turn-on-secure-inputs-outputs.png" style="zoom:50%;" />
 
 ### Concurrency and Parallelism
 
@@ -38,7 +38,7 @@ Typically, when working with HTTP requests in **Power Automate**, a sample JSON 
 
 The following image shows a trigger condition that will keep the flow from firing unless the *correlationid* and *body* fields are present in the **triggerBody** object.
 
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAutomate/PowerAutomate-Triggers-HTTP.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/PowerAutomate-Triggers-HTTP.JPG" style="zoom:50%;" />
 
 ### Trigger Object
 
@@ -46,37 +46,37 @@ The following image shows a trigger condition that will keep the flow from firin
 
 The below image is the trigger for a **Recurrence**:
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/PowerAutomate-Triggers-Recurrance.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/PowerAutomate-Triggers-Recurrance.JPG" style="zoom:50%;" />
 
 Here's an example of the trigger object for **Recurrence**:
 
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAutomate/Trigger-Object-Recurrance-JSON.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/Trigger-Object-Recurrance-JSON.JPG" style="zoom:50%;" />
 
-The below image is the trigger information for the **Common Data Service**, which unlike the **Recurrence** contains the **Retry Policy** feature:
+The below image is the trigger information for the **Dataverse**, which unlike the **Recurrence** contains the **Retry Policy** feature:
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/PowerAutomate-Triggers-CDS.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/PowerAutomate-Triggers-CDS.JPG" style="zoom:50%;" />
 
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAutomate/Trigger-Object-JSON.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/Trigger-Object-JSON.JPG" style="zoom:50%;" />
 
-Notice the host contains the specific **operation id**, but more important is the dataset parameter which shows which environment the trigger is listening to. In this case this represents the "**(current)**" environment. Additionally the correlation and client request identifiers (*x-ms-correlation-request-id* and *x-ms-client-request-id*) are shown which can help track and troubleshoot flows.
+Notice the host contains the specific **operation id**, but more important is the dataset parameter which shows which environment the trigger is listening to. In this case this represents the "**(current)**" environment. Additionally the correlation and client request identifiers (***x-ms-correlation-request-id*** and ***x-ms-client-request-id***) are shown which can help track and troubleshoot flows.
 
 ## Workflow
 
 The **Power Automate run time information** can be found in the *workflow* method which contains information about **the flow, the environment, and the specific run**. This object can be stored as a variable in the **Power Automate** flow and even can be passed as a response from the flow itself. The below image shows how the output when setting the "***workflow()***" function as an object.
 
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAutomate/Workflow-ObjectOverview.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/Workflow-ObjectOverview.JPG" style="zoom:50%;" />
 
 ### The Workflow Time Stamps and Tracking Identifiers
 
 Within the root of the workflow object lies properties that can help administrators track the specific workflow run. The **[clientTrackingId](https://docs.microsoft.com/en-us/rest/api/logic/WorkflowRuns/List#correlation), a tracking Id, start time and end time** are displayed here. Looking into the time stamps I don't see them lining up with the data provided for solution aware flows using the **Get-FlowRun** cmdlet, but more to the trigger timing. That said,  **Tracked Properties** can help for stand alone action and/or flow duration tracking.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/Functions/Workflow.Object.TimeStampAndTrackingIds.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/Functions/Workflow.Object.TimeStampAndTrackingIds.JPG" style="zoom:50%;" />
 
 ### The Workflow Run Object
 
 To find out more about the specific run, you can cast the ***workflow().run*** object as a variable and view the properties. Run properties include the **id**, the **name**, and the **type**. This information, specifically the "**name**" property, <u>can be correlated to the *ClientTrackingId* found in the **Get-FlowRun** cmdlet which we cover in the next article</u>. 
 
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAutomate/Workflow-Run-Overview.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/Workflow-Run-Overview.JPG" style="zoom:50%;" />
 
 For **Azure Logic Apps**, please refer to [this document detailing the REST API](https://docs.microsoft.com/en-us/rest/api/logic/WorkflowRuns/Get).
 
@@ -84,7 +84,7 @@ For **Azure Logic Apps**, please refer to [this document detailing the REST API]
 
 Additionally, the flow is further described in the **tags** object. The **tags** object contains the display name (*flowDisplayName*), the environment it belongs to (*environmentName*), if its part of the common data service (solution aware) (*sharingType*) and the logic app name (*logicAppName*).
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/Functions/Workflow-Object-Tags.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/Functions/Workflow-Object-Tags.JPG" style="zoom:50%;" />
 
 The tags object is extremely important for Power Automate Flows as it stores the information needed to find a specific flow in an environment. **Using this tags object, coupled with the run object properties, will allow for deeper insights and analysis.**
 
@@ -100,31 +100,31 @@ To begin working with Actions responses within other actions, [review the Action
 
 To **read information from previously run actions** within a Power Automate flow, use [the actions function](https://docs.microsoft.com/en-us/azure/logic-apps/workflow-definition-language-functions-reference#actions).  When using the actions function, the entire action object is presented. Included are shorthand functions [actionBody](https://docs.microsoft.com/en-us/azure/logic-apps/workflow-definition-language-functions-reference#actionBody), [actionOuputs](https://docs.microsoft.com/en-us/azure/logic-apps/workflow-definition-language-functions-reference#actionOutputs) and [body](https://docs.microsoft.com/en-us/azure/logic-apps/workflow-definition-language-functions-reference#body).
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/Actions/Actions.Expression.Trigger.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/Actions/Actions.Expression.Trigger.JPG"  />
 
 ### Action Outputs
 
 The output for a particular connector action can be read by using the expression outputs('<name of the action>'). In these action outputs, specifically ones that perform an external connection, are headers, the status code and output body. The value of the variable is an expression "**@outputs('Update_a_record')**". 
 
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAutomate/Outputs-CDS-Update_a_record.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/Outputs-CDS-Update_a_record.JPG" style="zoom:50%;" />
 
-You can see the top action is called "Update a record" and is a **Common Data Service connector action**.
+You can see the top action is called "Update a record" and is a **Dataverse connector action**.
 
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAutomate/Trigger-vs-Action-CDS-Headers.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/Trigger-vs-Action-CDS-Headers.JPG" style="zoom:50%;" />
 
-The image above shows a comparison of the **Common Data Service Trigger against the Action**. Notice how the action includes the status code as opposed to the status of succeeded that the trigger produced. This status code along with the header and body is essential to finding out the outcome of our integration.
+The image above shows a comparison of the **Dataverse Trigger against the Action**. Notice how the action includes the status code as opposed to the status of succeeded that the trigger produced. This status code along with the header and body is essential to finding out the outcome of our integration.
 
 #### Output Header
 
-The output, if using a connector, will include the header properties from the response of the connector. Inside here we can find information pertaining to accepted and expected formats. **Session and cookie information including correlating identifiers** such as "**REQ_ID**" or "**x-ms-service-request-id**",  can also be found here to troubleshoot. For **Common Data Service calls, the aforementioned identifiers and API throttle headers** can be used to help shed light on potential issues.
+The output, if using a connector, will include the header properties from the response of the connector. Inside here we can find information pertaining to accepted and expected formats. **Session and cookie information including correlating identifiers** such as "**REQ_ID**" or "**x-ms-service-request-id**",  can also be found here to troubleshoot. For **Dataverse calls, the aforementioned identifiers and API throttle headers** can be used to help shed light on potential issues.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/Actions/Actions.Output.Headers.CDS.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/Actions/Actions.Output.Headers.CDS.JPG" style="zoom:50%;" />
 
 #### Output Body
 
-The **output body contains the response data from the connector request**. Depending on what connector and action used, we'll see various values. Typically, when designing **Power Automate Flows**, values from the output body are what are used downstream in other conditions and actions. **For the Common Data Service, this could be list of records, responses from custom actions, or possibly empty.**
+The **output body contains the response data from the connector request**. Depending on what connector and action used, we'll see various values. Typically, when designing **Power Automate Flows**, values from the output body are what are used downstream in other conditions and actions. **For Dataverse, this could be list of records, responses from custom actions, or possibly empty.**
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/Actions/Actions.Output.Body.CDS.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/Actions/Actions.Output.Body.CDS.JPG" style="zoom:50%;" />
 
 For outputs, just like inputs, keep in mind the considerations when using the secure inputs and outputs feature.
 
@@ -134,7 +134,7 @@ In this article we have **covered the beginnings of controlling and monitoring P
 
 In the following articles covering Microsoft Power Automate Flow run time, we will explore **tracked properties**, **secure input and output** and how they can be used to extract and pass data between actions. We will also look at **techniques for error handling**. Finally we will discuss **pushing events to Application Insights and reviewing previous flow runs for monitoring and governance**.
 
-If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details. 
+If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), please contact your **Microsoft representative** for further details. 
 
 Your feedback is **<u>extremely valuable</u>** so please leave a comment below and I'll be happy to help where I can! Also, if you find any inconsistencies, omissions or have suggestions, [please go here to submit a new issue](https://github.com/aliyoussefi/MonitoringPowerPlatform/issues).
 
