update PA Audit and Activity Logs Pt 1

--- a/docs/04.02.01 - Monitoring Power Automate - Auditing and Activity Logs Part 1.md
+++ b/docs/04.02.01 - Monitoring Power Automate - Auditing and Activity Logs Part 1.md
@@ -1,5 +1,10 @@
 # Monitoring the Power Platform: Power Automate - Auditing and Activity Logs Part 1
+## Author Note
+All content, including samples, images and writings can be found in my GitHub repo.
 
+This specific article appears here.
+## Revisions
+02/14/2023 - Fixed images, updated titles. Renamed Common Data Service to Dataverse. Renamed Office 365 Security to Microsoft Purview.
 ## Summary
 
 [**Microsoft Power Automate**](https://docs.microsoft.com/en-us/power-automate/getting-started) provides users the ability to quickly create and integrate applications within the enterprise. With this ability comes concerns with governance to ensure users are allowed the appropriate permissions as well as identifying specific connections created and shared across the organization. **Power Automate Flows** offer a wide array of connectors and the ability to identify which of these are used and the connections created is essential to applying security policies to the **Power Platform**. 
@@ -8,21 +13,21 @@ This article begins by discussing the concept of **solution aware flows**. After
 
 ## Differences between My Flows and Solution Flows
 
-Before getting into the different flow events that can be managed and reported on, we need to first address  the differences between **My Flows** and Flows that are contained within a solution. **My Flows** are created in the https://flow.microsoft.com portal and <u>reside within the environment the maker created them in</u>. **Flows within solutions**, have similar characteristics as **My Flows** but **reside within a Common Data Service solution**. These are called "**<u>solution aware flows</u>**". The distinction may seem small at first but actually has a big impact into what we can do as both makers and admins.
+Before getting into the different flow events that can be managed and reported on, we need to first address  the differences between **My Flows** and Flows that are contained within a solution. **My Flows** are created in the https://flow.microsoft.com portal and <u>reside within the environment the maker created them in</u>. **Flows within solutions**, have similar characteristics as **My Flows** but **reside within a Dataverse solution**. These are called "**<u>solution aware flows</u>**". The distinction may seem small at first but actually has a big impact into what we can do as both makers and admins.
 
 <u>My Flows:</u>
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/MyFlows.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/MyFlows.JPG" style="zoom:50%;" />
 
 <u>Solution Aware Flows:</u>
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/SolutionAwareFlows.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/SolutionAwareFlows.JPG" style="zoom:50%;" />
 
 Reviewing the article **[Power Automate Analytics](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-power-automate---power-automate-analytics)**, we begin to see where differences in reporting and even the tools we can use differ between the two. In that article, the analytics reported from either a **My Flow** or a **solution aware flow** show much different level or insight. Each flow within a solution can be viewed across an environment while **My Flows** are shown individually.
 
-For tooling, **My Flows** do not have a concept of using the **Common Data Service's current environment** as shown in **Aaron Richards'** article "**[Using the Common Data Service (Current Environment) Power Automate Connector](https://community.dynamics.com/crm/b/crminthefield/posts/using-the-common-data-service-current-environment-power-automate-connector)**". As the article showcases, utilizing the **Common Data Service current environment connector** allows for actions such as **bound and unbound actions**, utilizing **FetchXml** and other **Dynamics 365** or **Model Driven App** concepts.
+For tooling, **My Flows** do not have a concept of using the **Dataverse's current environment** as shown in **Aaron Richards'** article "**[Using the Dataverse (Current Environment) Power Automate Connector](https://community.dynamics.com/crm/b/crminthefield/posts/using-the-common-data-service-current-environment-power-automate-connector)**". As the article showcases, utilizing the **Dataverse current environment connector** allows for actions such as **bound and unbound actions**, utilizing **FetchXml** and other **Dynamics 365** or **Model Driven App** concepts.
 
-Another very important piece to point out is [**Application Lifecycle Management with Flows**](https://docs.microsoft.com/en-us/power-automate/overview-solution-flows). As an enterprise utilizing flows in a production ready environment, administrators will want **automation tools to migrate changes from developers**. **<u>Solution aware flows, as part of a Common Data Service solution, can be neatly packaged and moved across sandbox and test environments towards production.</u>** They also can leverage existing tools such as [**Solution Packager**](https://docs.microsoft.com/en-us/dynamics365/customerengagement/on-premises/developer/compress-extract-solution-file-solutionpackager) to unpack and store within source control.
+Another very important piece to point out is [**Application Lifecycle Management with Flows**](https://docs.microsoft.com/en-us/power-automate/overview-solution-flows). As an enterprise utilizing flows in a production ready environment, administrators will want **automation tools to migrate changes from developers**. **<u>Solution aware flows, as part of a Dataverse solution, can be neatly packaged and moved across sandbox and test environments towards production.</u>** They also can leverage existing tools such as [**Solution Packager**](https://docs.microsoft.com/en-us/dynamics365/customerengagement/on-premises/developer/compress-extract-solution-file-solutionpackager) to unpack and store within source control.
 
 Finally, solution aware flows allow administrators the ability to use additional **API** and **PowerShell** commands to report and manage flow and <u>individual flow runs</u>. This article continues down this path as we explore the **Power Apps Connectors** and **Power Apps PowerShell** commands.
 
@@ -65,7 +70,7 @@ To view a specific user's flows across all environments, use the **Get-FlowOwner
 Get-FlowOwnerRole -PrincipalObjectId '{userId}'
 ```
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/UnifiedAuditLog/PowerAutomate/Microsoft.PowerApps.Administratiom.PowerShell.Get-FlowOwnerRole.Response.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/UnifiedAuditLog/PowerAutomate/Microsoft.PowerApps.Administratiom.PowerShell.Get-FlowOwnerRole.Response.JPG" style="zoom:50%;" />
 
 Consider the use of these commands with techniques discussed in *[Part 2 of Power Automate - Auditing and Activity Logs](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-power-automate---auditing-and-activity-logs-part-2)* for additional logging capabilities.
 
@@ -118,7 +123,7 @@ The **Edited Flow Permission event** can show administrators which flows are act
 
 
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/UnifiedAuditLog/PowerAutomate/Flow.RunOnlyPermissions.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/UnifiedAuditLog/PowerAutomate/Flow.RunOnlyPermissions.JPG" style="zoom:50%;" />
 
 ## Next Steps
 
@@ -128,7 +133,7 @@ We have also covered the what activities are currently captured for **Power Auto
 
 This article is designed to supplement the article on **Power Automate Analytics**, which provides more of an all up view of **Power Automate** usage. Combining these two documents, an administrator can now <u>track analytic metrics as well as the events that define those metrics</u>.
 
-If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details. 
+If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), please contact your  **Microsoft representative** for further details. 
 
 Your feedback is **<u>extremely valuable</u>** so please leave a comment below and I'll be happy to help where I can! Also, if you find any inconsistencies, omissions or have suggestions, [please go here to submit a new issue](https://github.com/aliyoussefi/MonitoringPowerPlatform/issues).
 
